--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>OFFICE</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> No 50000 Godage Mawatha, Anuradhapura, Sri Lanka</p>
+                    <p><i class="fas fa-map-marker-alt"></i> No 328/1A Track 05 Jayanthipura, Sri Lanka</p>
                     <p><i class="fas fa-clock"></i> Sun – Sat 06:30AM-10:30PM</p>
                     <p><i class="fas fa-phone"></i> +94 71 306 1878</p>
                     <div class="social-links">
@@ -377,7 +377,7 @@
                 </div>
                 <div class="footer-col">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Anuradhapura, Sri Lanka</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Polonnaruwa, Sri Lanka</p>
                     <p><i class="fas fa-phone"></i> +94 71 306 1878</p>
                     <p><i class="fas fa-envelope"></i> info@bongotours.com</p>
                 </div>
