--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>Indulge in amazing experiences with our tours and uncover timeless beauty with our classic packages.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/about-img.jpg" alt="Bongo Tours">
+                    <img src="images/3.png" alt="Bongo Tours">
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
                 <div class="tour-card">
                     <div class="tour-card-inner">
                         <div class="tour-card-front">
-                            <img src="images/tour-1.jpg" alt="City Tour">
+                            <img src="images/2.png" alt="City Tour">
                             <div class="tour-badge">BEST SELLER</div>
                             <div class="tour-price">$99<span>/person</span></div>
                         </div>
@@ -174,7 +174,7 @@
                 <div class="tour-card">
                     <div class="tour-card-inner">
                         <div class="tour-card-front">
-                            <img src="images/tour-2.jpg" alt="Classic Tour">
+                            <img src="images/3.png" alt="Classic Tour">
                             <div class="tour-badge">POPULAR</div>
                             <div class="tour-price">$799<span>/person</span></div>
                         </div>
@@ -197,7 +197,7 @@
                 <div class="tour-card">
                     <div class="tour-card-inner">
                         <div class="tour-card-front">
-                            <img src="images/tour-3.jpg" alt="Nature Tour">
+                            <img src="images/4.png" alt="Nature Tour">
                             <div class="tour-badge">NEW</div>
                             <div class="tour-price">$149<span>/person</span></div>
                         </div>
@@ -220,7 +220,7 @@
                 <div class="tour-card">
                     <div class="tour-card-inner">
                         <div class="tour-card-front">
-                            <img src="images/tour-4.jpg" alt="Jeep Safari">
+                            <img src="images/5.webp" alt="Jeep Safari">
                             <div class="tour-badge">ADVENTURE</div>
                             <div class="tour-price">$129<span>/person</span></div>
                         </div>
@@ -245,6 +245,9 @@
             </div>
         </div>
     </section>
+
+
+    
 
     <!-- Testimonials Section -->
     <section class="testimonials section-padding" id="testimonials">
