--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bongo Tours - Your Gateway to Amazing Adventures</title>
+    <title>ceylonka Tours - Your Gateway to Amazing Adventures</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>BONGO TOURS</h1>
+                <h1>ceylonka TOURS</h1>
                 <p>Your Gateway to Amazing Adventures</p>
             </div>
             <nav class="navbar">
@@ -54,8 +54,8 @@
     <section class="about section-padding" id="about">
         <div class="container">
             <div class="section-header">
-                <h2>Explore With Bongo Tours</h2>
-                <p>Welcome to Bongo Tours, where we've curated unforgettable experiences for our clients.</p>
+                <h2>Explore With ceylonka Tours</h2>
+                <p>Welcome to ceylonka Tours, where we've curated unforgettable experiences for our clients.</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
