--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ceylonka Tours - Your Gateway to Amazing Adventures</title>
+    <title>Ceylonka Tours - Your Gateway to Amazing Adventures</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>ceylonka TOURS</h1>
+                <h1>Ceylonka TOURS</h1>
                 <p>Your Gateway to Amazing Adventures</p>
             </div>
             <nav class="navbar">
@@ -42,7 +42,7 @@
     <section class="hero" id="home">
         <div class="container">
             <h1>We Will Make Your Dream Holiday</h1>
-            <p>Discover amazing adventures with Bongo Tours. With years of expertise, we offer tailored day and multi-day tours.</p>
+            <p>Discover amazing adventures with Ceylonka Tours. With years of expertise, we offer tailored day and multi-day tours.</p>
             <div class="hero-buttons">
                 <a href="#tours" class="btn">Explore Tours</a>
                 <a href="https://wa.me/94713061878?text=Hi%20Bongo%20Tours,%20I%20need%20more%20information%20about%20your%20tours." class="btn btn-outline" target="_blank">Chat Now</a>
@@ -54,7 +54,7 @@
     <section class="about section-padding" id="about">
         <div class="container">
             <div class="section-header">
-                <h2>Explore With ceylonka Tours</h2>
+                <h2>Explore With Ceylonka Tours</h2>
                 <p>Welcome to ceylonka Tours, where we've curated unforgettable experiences for our clients.</p>
             </div>
             <div class="about-content">
@@ -342,7 +342,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <h3>BONGO TOURS</h3>
+                    <h3>Celonka TOURS</h3>
                     <p>Your Gateway to Amazing Adventures</p>
                     <p>Discover amazing experiences with Bongo Tours. With years of expertise in creating memorable journeys.</p>
                 </div>
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2016-2024 Bongo Tours. All Rights Reserved.</p>
+                <p>&copy; 2024-2025 Ceylonka Tours. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Disclaimer</a>
