--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
     <!-- Header/Navigation -->
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <h1>Ceylonka TOURS</h1>
-                <p>Your Gateway to Amazing Adventures</p>
-            </div>
+       <!-- In your header section, replace: -->
+<div class="logo">
+    <h1>Ceylonka TOURS</h1>
+    <p>Your Gateway to Amazing Adventures</p>
+</div>
+
+<!-- With: -->
+<div class="logo">
+    <img src="images/logo.jpg" alt="Ceylonka Tours - Premium Sri Lanka Travel Experiences" width="220" height="80">
+</div>
             <nav class="navbar">
                 <ul>
                     <li><a href="#home">Home</a></li>
