--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
                 <h2>Explore Sri Lanka With Ceylonka Tours</h2>
                 <p>Welcome to Ceylonka Tours, where we've curated unforgettable Sri Lankan experiences for our clients since 2015.</p>
             </div>
+            
+<!-- SnapWidget -->
+<div class="snapwidget-rpf" data-widget-id="1094643"></div>
+<script>!function(s,n,ap){if(!s.getElementById(ap)){var a=s.createElement("script");a.id=ap,a.src="https://snapwidget.com/js/snapwidget-rpf.js",s.getElementsByTagName("head")[0].appendChild(a)}}(document,0,"snaprpf");</script>
+
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1094644" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:480px; height:160px" title="Posts from Facebook"></iframe>
+
+
+
             <div class="about-content">
                 <div class="about-text">
                     <h3>Tailor-Made Sri Lanka Adventures</h3>
