--- a/index.html
+++ b/index.html
@@ -47,27 +47,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     
-    <!-- Schema.org markup for Google -->
-    <script type="application/ld+json">
+  <!-- Schema.org markup for Google -->
+<script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "TravelAgency",
       "name": "Ceylonka Tours",
-      "description": "Premium Sri Lanka tour operator offering cultural tours, wildlife safaris, and beach vacations",
+      "description": "Premium Sri Lanka tour operator offering cultural tours, wildlife safaris, and beach vacations.",
+      "image": "https://www.ceylonkatours.com/images/logo.jpg",
+      "url": "https://www.ceylonkatours.com",
+      "telephone": "+94 71 306 1878",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "No 328/1A Track 05 Jayanthipura",
+        "streetAddress": "No 328/1A, Track 05, Jayanthipura",
         "addressLocality": "Polonnaruwa",
-        "addressRegion": "Sri Lanka"
+        "addressRegion": "North Central Province",
+        "postalCode": "51000",
+        "addressCountry": "LK"
       },
-      "telephone": "+94713061878",
-      "openingHours": "Mo-Su 06:30-22:30",
-      "image": "https://www.ceylonkatours.com/images/logo.jpg",
-      "priceRange": "$$",
-      "url": "https://www.ceylonkatours.com"
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday",
+            "Sunday"
+          ],
+          "opens": "06:30",
+          "closes": "22:30"
+        }
+      ],
+      "priceRange": "$$"
     }
     </script>
-
+    
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
