--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Primary Meta Tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ceylonka Tours | Premium Sri Lanka Travel Experiences & Safari Adventures</title>
+        <title>Ceylonka Tours | Explore Sri Lanka with Experts</title>
         <meta name="description" content="Ceylonka Tours offers exceptional Sri Lanka tour packages...">
         <meta name="keywords" content="Sri Lanka tours, safari, vacation, tourism">
         <meta name="author" content="Ceylonka Tours">
